--- a/recomendaciones.html
+++ b/recomendaciones.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/reco.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <title>CoronaNews</title>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -43,15 +48,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
-                    <img src="img/manos.png" class="img"  width="304" height="236">
+                    <img src="img/manos.png" class="img"  width="304" height="236"><br><br>
                     <span>Siempre que sea posible lavarse las manos, con agua y jabón o bien, gel antibacterial</span>
                 </div>
                 <div class="col-lg-4">
-                    <img src="img/codo.jpg" class="img"  width="304" height="236"><br>
+                    <br><img src="img/codo.jpg" class="img"  width="304" height="236"><br><br>
                     <span>En caso de estornudar, cubrirse la boca con la parte interior del codo ¡Nunca con la mano!</span>
                 </div>
                 <div class="col-lg-4">
-                    <img src="img/medico.jpg" class="img"  width="304" height="236"><br>
+                    <br><img src="img/medico.jpg" class="img"  width="304" height="236"><br><br>
                     <span>En caso de presentar alguno de los sintomas, acuda de inmediato a su médico</span>
                 </div>
             </div>
