--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <tr>
                             <th>Casos Totales</th>
                             <th>Activos</th>
-                            <th>Muestos</th>
+                            <th>Muertos</th>
                             <th>Recuperados</th>
                         </tr>
                        
