--- a/index.html
+++ b/index.html
@@ -43,18 +43,21 @@
                         <div class="col-lg-4 col-sm-12">
                           <div class="infectados"  id="infectados">
                             <h3>Infectados totales en el mundo</h3>
+                            <p class="cargando">Cargando...</p>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-sm-12">
                           <div class="muertos" id="muertos">
                             <h3>Muertes totales en el mundo</h3>
+                            <p class="cargando1">Cargando...</p>
                           </div>
                         </div>
 
                       <div class="col-lg-4 col-sm-12">
                         <div class="recuperados" id="recuperados">
                           <h3>Recuperados totales en el mundo</h3>
+                          <p class="cargando2">Cargando...</p>
                         </div>
                       </div>
                     </div>
@@ -64,12 +67,14 @@
                       <div class="col-lg-6 col-sm-12">
                         <div class="nuevos" id="nuevos">
                           <h3>Nuevos casos hoy</h3>
+                          <p class="cargando3">Cargando...</p>
                         </div>
                       </div>
                       
                       <div class="col-lg-6 col-sm-12">
                         <div class="n_muertos"  id="n_muertos">
                           <h3>Nuevas muertes hoy</h3>
+                          <p class="cargando4">Cargando...</p>
                         </div>
                       </div>
                       
